--- a/projects/2/index.html
+++ b/projects/2/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="manifest" href="/manifest.json">
   <title>Bootstrap Example</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -57,27 +58,28 @@
     </div>
   </div>
 </nav>
-     <div class="col-sm-2 sidenav">
+    <div class="col-sm-2 sidenav">
       <div class="well">
-        <button><a>Western X49 Southbound</a></button>
+          <button><a href="#Northbound49">Western 49 Northbound</a></button>
       </div>
       <div class="well">
-        <button><a>Western X49 Northbound</a></button>
+        <button><a href= "#SouthboundX49" >Western X49 Southbound</a></button>
       </div>
       <div class="well">
-          <button><a>Western 49 Northbound</a></button>
+        <button><a href= "#NorthboundX49" >Western X49 Northbound</a></button>
+      </div>
+      
+      <div class="well">
+          <button><a href= "#Southbound49" >Western 49 Southbound</a></button>
       </div>
       <div class="well">
-          <button><a>Western 49 Southbound</a></button>
+          <button><a href="#Eastbound152">Addison 152 Eastbound</a></button>
       </div>
       <div class="well">
-          <button><a>Addison 152 Eastbound</a></button>
+          <button><a href="#Westbound152">Addison 152 Westbound</a></button>
       </div>
       <div class="well">
-          <button><a>Addison 152 Westbound</a></button>
-      </div>
-      <div class="well">
-          <button><a>Kedzie 52</a></button>
+          <button><a href="#Southbound52">Kedzie 52</a></button>
       </div>
     </div>
 <div class="container-fluid text-center">    
